[tool.poetry]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = ["DavidNavarroSaiz <32474368+DavidNavarroSaiz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "reflection_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langgraph = "^0.2.39"
grandalf = "^0.8"
langchain-community = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
